--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=projet101
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=projet101
 
-
+spring.data.mongodb.uri=mongodb+srv://dbIhec:123456789D@cluster0-wehhq.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mogodb.database=projet101
 #mail sender smtp config
 debug=true
 
